--- a/index.html
+++ b/index.html
@@ -98,7 +98,9 @@
     </nav>
 
     <div class="about">
-        <p>Yeah I made Scioly Elo.</p> 
+        <p>Yeah I made Scioly Elo.</p>
+        <a href="https://github.com/Hydrolicpeanut/Jeloo">Link to the Github</a>
+
     <script>
         document.addEventListener('mousemove', function(e) {
         const bg = document.querySelector('.cursor-follow-bg');
