--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
     <div class="about">
         <p>Yeah I made Scioly Elo.</p>
-        <a href="https://github.com/Hydrolicpeanut/Jeloo">Link to the Github</a>
+        <a href="https://github.com/RajivJonnala/Jeloo">Link to the Github</a>
 
     <script>
         document.addEventListener('mousemove', function(e) {
